# colabctl

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DIRECTIVES.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SPEC.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: canary.yml  ci.yml  docs.yml  publish.yml
api/: index.html
architecture/: index.html
backends/: index.html
deployment/: index.html
docs/: api.md  architecture.md  backends.md  deployment.md  examples.md  index.md  plan.md
examples/: index.html
plugins/colabctl-hydra-launcher/: README.md  pyproject.toml
plugins/colabctl-hydra-launcher/hydra_plugins/colabctl_launcher/: __init__.py  _spec.py  config.py  launcher.py
search/: search_index.json
site/: 404.html  index.html  search.html
site/architecture/: index.html
site/backends/: index.html
site/deployment/: index.html
site/search/: search_index.json
spikes/: PHASE-A-FINDINGS.md  PHASE-A.md  PHASE0-FINDINGS.md  PHASE0.md  canary-baseline.json  canary.py  gpu_probe.py  modal_smoke.py  native_smoke.py  phase_a_drive.py  phase_a_keepalive.py  phase_a_runtime.py  phase_a_sidecar.py  phase_b_keepalive.py  run_phase0.sh
src/colabctl/: __init__.py  _entry.py  allocation.py  cli.py  doctor.py  drift.py  drive.py  drive_runtime.py  errors.py  fsutil.py  lifecycle.py  mcp_server.py  models.py  notebook.py  observability.py  skills.py  spend.py  tracking.py
src/colabctl/_skills/colabctl/: SKILL.md
src/colabctl/_skills/colabctl/examples/: recipes.md
src/colabctl/_skills/colabctl/references/: commands.md  mcp-tools.md
src/colabctl/auth/: __init__.py  adc.py  base.py  diagnostics.py
src/colabctl/backends/: __init__.py  base.py  colab.py  factory.py  hf_backend.py  kaggle_backend.py  modal_backend.py  router.py  runpod_backend.py  vast_backend.py  vertex_backend.py
src/colabctl/cost/: __init__.py  feeds.py  price.py  risk.py
src/colabctl/jobs/: __init__.py  backend.py  codes.py  runtime.py
src/colabctl/sdk/: __init__.py  client.py  remote.py
src/colabctl/secrets/: __init__.py  base.py  encrypted_file.py  keyring_store.py  memory.py
src/colabctl/state/: __init__.py  models.py  store.py
src/colabctl/transport/: __init__.py  base.py
src/colabctl/transport/browser/: __init__.py  bridge.py  mcp.py
src/colabctl/transport/cli/: __init__.py  adapter.py  parser.py
src/colabctl/transport/native/: __init__.py  adapter.py  client.py  contents.py  kernel.py
tests/: conftest.py  test_allocation.py  test_atomic_persistence.py  test_audit_ledger.py  test_auth.py  test_auth_diagnostics.py  test_backends_base.py  test_browser_bridge.py  test_cli_adapter.py  test_cli_auth.py  test_cli_cost.py  test_cli_failover.py  test_cli_job.py  test_cli_job_history.py  test_cli_jobs_detached.py  test_cli_native.py  test_cli_notebook.py  test_cli_parser.py  test_cli_transport_bin.py  test_cli_update.py  test_colab_backend.py  test_contents.py  test_cost_feeds.py  test_cost_price.py  test_cost_risk.py  test_doctor.py  test_drift.py  test_drive.py  test_drive_checkpointer.py  test_drive_runtime.py  test_entry.py  test_errors.py  test_factory.py  test_hf_backend.py  test_hydra_launcher.py  test_integration_kernel.py  test_jobs_backend.py  test_jobs_codes.py  test_jobs_gc.py  test_jobs_liveness.py  (+54 more)
