[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colabctl"
version = "0.2.0"
description = "Programmatic control of Google Colab for developers and AI agents — allocate GPUs, run code & notebooks, sync files, without the website."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "colabctl contributors" }]
keywords = ["colab", "gpu", "jupyter", "mcp", "ml", "remote-execution"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]

# Core stays deliberately light. Heavy/optional integrations are lazy-imported
# inside the modules that need them and declared as extras below, so `import
# colabctl` works with just pydantic + httpx.
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Native /tun/m/* transport + kernel execution (the from-scratch path).
native = [
    "jupyter-kernel-client>=0.9.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
]
# Developer CLI surface.
cli = ["typer>=0.12", "rich>=13.7"]
# SDK extras: ship-a-local-function-to-a-GPU (@remote) marshalling.
sdk = ["cloudpickle>=3.0"]
# Browser-bridge transport (colab-mcp model): local WebSocket relay server.
browser = ["websockets>=12"]
# OS-keychain + encrypted-file secret storage (headless/CI).
secrets = ["keyring>=25.0", "cryptography>=42.0"]
# MCP server for AI agents.
mcp = ["mcp>=1.2"]
# Google Drive durable file sync.
drive = ["google-api-python-client>=2.0", "google-auth>=2.49.1"]
# Sanctioned alt-backends (v1 scope: Modal + Vertex).
modal = ["modal>=0.64"]
vertex = ["google-cloud-aiplatform>=1.60"]
hf = ["huggingface_hub>=0.34"]
kaggle = ["kaggle>=1.6"]
runpod = ["runpod>=1.6"]
# Local-Jupyter integration test rig (validate the native kernel path without Colab).
integration = ["jupyter-server>=2", "ipykernel>=6"]
all = [
    "colabctl[native,cli,sdk,secrets,mcp,drive,modal,vertex,hf,kaggle,runpod,browser]",
]

[project.scripts]
colabctl = "colabctl.cli:main"
colabctl-mcp = "colabctl.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/colabctl/colabctl"
Documentation = "https://github.com/colabctl/colabctl/blob/main/SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/colabctl"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF", "ANN"]
ignore = ["ANN401"]  # allow typing.Any where genuinely needed

[tool.ruff.lint.flake8-bugbear]
# Typer relies on call expressions in argument defaults (Argument/Option).
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# SIM117: tests nest `async with` where the inner context depends on the outer.
# RUF012: test-double classes use plain mutable class attributes as shared state.
# RUF001-003: stress tests intentionally use ambiguous/multibyte unicode.
"tests/*" = ["ANN", "B011", "SIM117", "RUF012", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# Lazy-imported third-party libs without bundled stubs.
[[tool.mypy.overrides]]
module = [
    "keyring.*",
    "google.*",
    "google_auth_oauthlib.*",
    "jupyter_kernel_client.*",
    "cryptography.*",
    "cloudpickle.*",
    "mcp.*",
    "modal.*",
    "googleapiclient.*",
    "websockets.*",
    "huggingface_hub.*",
    "kaggle.*",
    "runpod.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: live integration tests needing a local Jupyter server (opt-in via COLABCTL_INTEGRATION=1)",
]
