[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colabctl-hydra-launcher"
version = "0.1.0"
description = "Hydra launcher plugin: run --multirun sweeps as durable colabctl detached GPU jobs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["hydra", "colab", "gpu", "sweep", "multirun", "colabctl"]
dependencies = [
    "hydra-core>=1.3",
    "cloudpickle>=3.0",
    "colabctl>=0.3.7",
]

# hydra_plugins is a PEP 420 namespace package (no top-level __init__.py) so it merges with
# other hydra launcher plugins; ship its contents verbatim.
[tool.hatch.build.targets.wheel]
only-include = ["hydra_plugins"]

[tool.hatch.build.targets.sdist]
only-include = ["hydra_plugins", "README.md"]
